Make Memory implementation safe
Safety first! Or well, second